tests/snapshots/mermaid_gantt_render__multi_year@40.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
             The long haul              
                                        
              2020      2022     2024   
          ├─────┬─────────┬────────┬────
Phases    │                             
  Research│▒▒▒▒▒▒▒▒▒▒▒▒                 
  Delivery│            ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
