tests/snapshots/mermaid_gantt_render__multi_year@80.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
                                 The long haul                                  
                                                                                
                2019     2020      2021      2022     2023      2024     2025   
            ├─────┬────────┬─────────┬─────────┬────────┬─────────┬────────┬───┤
            │                                                                   
Phases      │                                                                   
  Research  │     ███████████████████████                                       
  Delivery  │                            ██████████████████████████████████
