tests/snapshots/mermaid_gantt_render__only_milestones@40.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
             2024-06-01       2024-06-02
            ├──┬──────────────────────┬┤
            │                           
Gates       │                           
  Alpha     │  ◆                        
  Beta      │  ◆
