tests/snapshots/mermaid_gantt_render__only_milestones@80.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
        00:00  03:00    06:00    09:00    12:00    15:00    18:00    21:00      
       ├─────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────
Gates  │                                                                        
  Alpha│◆                                                                       
  Beta │◆
