tests/snapshots/mermaid_gantt_render__release_plan@120.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
                                                      Release plan                                                      
                                                                                                                        
                 2024-01-04       2024-01-11        2024-01-18        2024-01-25       2024-02-01        2024-02-08     
             ├────────┬────────────────┬─────────────────┬─────────────────┬────────────────┬─────────────────┬─────────
Design       │                                                                                                          
  Spec       │░░░░░░░░░░░░░░░░░░░░                                                                                      
  Review     │                    ███████████████                                                                       
             │                                                                                                          
Build        │                                                                                                          
  Core engine│                                   ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
  Docs       │                                                     ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                  
  Ship       │                                                                                                         ◆
