tests/snapshots/mermaid_gantt_render__release_plan@40.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
              Release plan              
                                        
                 Jan 2024    Feb 2024   
                ├──┬─────────────┬─────┤
                │                       
Design          │                       
  Spec          │  ███                  
  Review        │     ███               
                │                       
Build           │                       
  Core engine   │        █████████████  
  Docs          │            ██████     
  Ship          │                     ◆ 
                                        
                 █ done   █ active
