tests/snapshots/mermaid_gantt_render__single_day@120.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
                                                        One day                                                         
                                                                                                                        
          00:00  02:00    04:00     06:00    08:00    10:00    12:00    14:00    16:00     18:00    20:00    22:00      
         ├─────────┬────────┬─────────┬────────┬────────┬────────┬────────┬────────┬─────────┬────────┬────────┬────────
All of it│▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
