tests/snapshots/mermaid_gantt_render__single_day@40.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
                One day                 
                                        
          00:00        12:00   18:00    
         ├───────────────┬───────┬──────
All of it│▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
