tests/snapshots/mermaid_gantt_render__single_day@80.snap
---
source: tests/mermaid_gantt_render.rs
expression: canvas.plain_text()
---
                                    One day                                     
                                                                                
             05-06 00:00   05-06 06:00    05-06 12:00   05-06 18:00  05-07 00:00
            ├─────┬─────────────┬──────────────┬─────────────┬─────────────┬───┤
            │                                                                   
All of it   │     █████████████████████████████████████████████████████████
